--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -22,7 +22,7 @@
   </HBox>
 
 
-  <TableView VBox.vgrow="ALWAYS" />
+  <TableView fx:id="filesTable" VBox.vgrow="ALWAYS" />
 
   <HBox spacing="5">
 
