--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" fx:controller="gb.lindx.fm.Controller" alignment="center">
+<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal" fx:controller="gb.lindx.fm.Controller" alignment="center">
 
   <MenuBar>
     <Menu text="File">
@@ -14,15 +14,10 @@
     </Menu>
   </MenuBar>
 
-
   <HBox>
-    <ComboBox />
-    <TextField HBox.hgrow="ALWAYS" editable="false" />
-    <Button text="Up" />
+    <fx:include source="panel.fxml" HBox.hgrow="ALWAYS" fx:id="leftPanel" />
+    <fx:include source="panel.fxml" HBox.hgrow="ALWAYS" fx:id="rightPanel" />
   </HBox>
-
-
-  <TableView fx:id="filesTable" VBox.vgrow="ALWAYS" />
 
   <HBox spacing="5">
 
