--- a/src/main/resources/panel.fxml
+++ b/src/main/resources/panel.fxml
@@ -10,7 +10,7 @@
 <VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal" fx:controller="gb.lindx.fm.PanelController" alignment="center">
 
   <HBox>
-    <ComboBox />
+    <ComboBox fx:id="disksBox" />
     <TextField HBox.hgrow="ALWAYS" editable="false" />
     <Button text="Up" />
   </HBox>
